# ai-reader

./: .env.example  GEMINI.md  README.md  package.json  vite.config.ts
.github/workflows/: release-macos.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/ai_context_visibility_20260119/: plan.md
conductor/archive/refine_reader_ui_20260111/: metadata.json
conductor/qwen-tts/: README.md  bundle.py  pyproject.toml  server.py
conductor/qwen-tts/tests/: test_bundle.py  test_server_optimization.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: sidecar.json
src-tauri/icons/: icon.icns
src-tauri/src/: books.rs  db.rs  lib.rs  openai.rs  qwen.rs
src/components/: AppearancePanel.tsx  ReaderLayout.tsx
src/hooks/: useLibrary.ts
src/lib/: elevenlabs.ts  openai.ts  pocket-tts.ts  qwen-tts.ts  readerHtml.ts  readerTypes.ts  tauri.ts  tts.ts
src/routes/: BookPage.tsx  LibraryPage.tsx  MobiBookPage.tsx  SettingsPage.tsx  ThreeDLibraryPage.tsx
src/tests/: AppearancePanel.test.tsx  ChatSidebar.test.tsx  ReaderLayout.test.tsx  SettingsPage.test.tsx  SettingsPage_voices.test.tsx  TTSPanel.test.tsx  TTSPanelPhase3.test.tsx  TTSProgressBar.test.tsx  aiContextIntegration.test.ts  appearance.test.ts  elevenlabs.test.ts  fonts.test.ts  library.test.tsx  navigation.test.ts  pocketTTSService.test.ts  readerHtml.test.ts  theme.test.ts  threadTitle.test.ts  ttsWordTimings.test.ts  useChatSidebar.test.tsx  useMobiReader.test.tsx  useTTS.test.ts  useTTS_auto.test.ts
(+49 files in other folders)
