[project]
name = "qwen-tts-server"
version = "0.1.0"
description = "Local Qwen3-TTS server for AI Reader"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "qwen-tts>=0.1.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]

[project.scripts]
qwen-tts-server = "server:main"
